# ot-harjoitustyo

./: README.md  pyproject.toml  tasks.py  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
src/: Tetris.py  Tetris2.py  block.py  block_forms.py  clock.py  gameover.py  index.py  index2.py  original.py  palikka.py  renderer.py  stopdrop.py  tapahtuma.py
